<resources>
    <string name="app_name">login</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="yzm_hint">请输入短信验证码</string>
    <string name="password_hint">请输入密码</string>
    <string name="yzm">获取验证码</string>
    <string name="home_yzm_login">手机号登录/注册</string>
    <string name="set_new_password_hint">请输入6-20位新密码</string>
    <string name="home_navigateTo_password">账户密码登录</string>
    <string name="home_password_login">手机号密码登录</string>
    <string name="set_password">设置密码</string>
    <string name="set_new_password">设置新密码</string>
    <string name="change_password">修改密码</string>
</resources>