<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginByYzmActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/login_background" />



    <LinearLayout
        android:id="@+id/layout_loginByYzm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="278dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/shape_login_form"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="43dp"
            android:paddingRight="31dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/home_yzm_login"
                android:textColor="@color/colorDark"
                android:textSize="20sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/account" />

                <EditText
                    android:id="@+id/edt_loginByYzm_phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:background="@null"
                    android:hint="@string/phone_hint"
                    android:inputType="number"
                    android:textColor="#000000"
                    android:textColorHint="#bcbcbc"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="23dp"
                android:background="#e8e7e7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/yzm" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <EditText
                    android:layout_marginLeft="20dp"
                    android:id="@+id/edt_yzm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:inputType="number"
                    android:hint="@string/yzm_hint"
                    android:textColor="#000000"
                    android:textColorHint="#bcbcbc"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_getYzm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="30dp"
                    android:text="@string/yzm"
                    android:textColor="@color/colorGetYzm"
                    android:textSize="15sp" />

        </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_loginByYzm"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="67dp"
            android:layout_marginRight="18dp"
            android:background="@drawable/shape_big_login_btn"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_navigateTo_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/home_navigateTo_password"
            android:textColor="@color/colorNavigateToPassword"
            android:textSize="15sp" />

    </LinearLayout>


</RelativeLayout>